--- a/twitter-frontend/src/styles.scss
+++ b/twitter-frontend/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    margin: 0;
+    background: url(http://papers.co/wallpaper/papers.co-ag77-google-lollipop-january-background-25-wallpaper.jpg);
+}
+
