--- a/twitter-frontend/src/app/login.html
+++ b/twitter-frontend/src/app/login.html
@@ -3,7 +3,7 @@
     <input matInput placeholder="Username"  [(ngModel)]="data.email" name="email">
   </mat-form-field>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Password"  [(ngModel)]="data.password" name="password">
+    <input matInput placeholder="Password" type="password" [(ngModel)]="data.password" name="password">
   </mat-form-field>
 
   <button mat-button (click)="logIn(data.email, data.password)">Login</button>
